fix(look): [body] enable background on mobile too

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -39,6 +39,7 @@
 }
 
 body {
+    background: var(--color-black) url("../images/background.jpg") repeat;
     font-family: var(--font-sans), sans-serif;
     color: var(--color-white);
     background-size: 100%;
